Revision history for Perl distribution Test-Class-Moose

0.44
        - Test::Class::Moose::Role - croak() if preamble doesn't load
          (Sebastian Willert)

0.43 2013-01-29
        - When running parallel tests, we now output a line of dots to the
          screen to show that the test suite hasn't stalled. Further, the dots
          are colored "green" and "red" (sorry color blind folk!) just like
          Test::Harness, so you can see if tests have passed or failed.

0.42 2013-01-15
        - Remove experimental END block causing issues for some test suites.
        - Merge Dave Rolsky's MetaJSON request (thanks, Dave!)
        - Add better github meta info
        - Document recommended test suite instantiation.
        - Document what Test::Class::Moose::Role is for.

0.41 2013-01-13
        - Fix bug where "skip_all" tests would report as failing if
          Sub::Attribute wasn't installed.

0.40 2013-01-12
        - Parallel tests now automatically ignore test methods tagged with
          'noparallel'.
        - Fix bug where sequential tests fail with parallel testing.
        - Remove long-deprecated test_reporting() method.
        - The second argument to test methods ($report) is now deprecated.
          Call $test->test_report instead.
        - You can now call has_tag() on a method report object.

0.30 [unreleased]
        - Experimental support for parallel testing. See
          Test::Class::Moose::Role::Parallel.

0.22 2013-08-17
        - Renamed tutorial from .pod to .pm to stop both cpan and metacpan
          from replacing main documentation with the tutorial.

0.21 2013-08-15
        - Fold on .t test into t/tags.t. Cleaner and stops some CPAN testers
          failures.

0.20 2013-08-15
        - Fix bug #87801 where excluded tags were ANDed instead of ORed.
          Stefan Corneliu Petrea.
        - The beginnings of a tutorial by Doug Bell (preaction)
        - Doc fix by Olaf Alders.